# temp-cli-scripts

./: .gitignore  README.md
aggregate-expression-types/: README.md  aggregate-generator.spec  package_script.py  pyproject.toml
aggregate-expression-types/aggregate_expression_types/: main.py
boolean-expression-types/: README.md  boolean-generator.spec  changes.patch  package_script.py  pyproject.toml
boolean-expression-types/boolean_expression_types/: main.py
